# demos

./: README.md
bauxite-supply-chain-monitor/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
bauxite-supply-chain-monitor/src/bauxite/: __init__.py  cli.py  client.py  fetch.py  render.py  settings.py
bauxite-supply-chain-monitor/templates/: index.html.j2
red-sea-watchboard/: .env.example  README.md  SKILL.md  pyproject.toml
red-sea-watchboard/src/maritime/: __init__.py  cli.py  fetch.py  render.py  settings.py
red-sea-watchboard/templates/: index.html.j2
strait-of-hormuz-underwriting-brief/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
strait-of-hormuz-underwriting-brief/src/hormuz/: __init__.py  cli.py  fetch.py  render.py  settings.py
strait-of-hormuz-underwriting-brief/templates/: index.html.j2
