[project]
name = "red-sea-watchboard"
version = "0.1.0"
description = "GDELT Cloud demo — Red Sea / Bab-el-Mandeb maritime threat watchboard. Generates a static HTML dashboard from one API key."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic-settings>=2.4",
]

[project.scripts]
red-sea = "maritime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maritime"]
